0030143: Foundation Classes - provide operator[] alias for NCollection_Array1, NCollection_Vector