src/NCollection/NCollection_Vector.hxx
@@ -238,6 +238,9 @@ public: //! @name public methods
     return Value (theIndex);
   }
 
+  //! Operator[] - query the const value
+  const TheItemType& operator[] (Standard_Integer theIndex) const { return Value (theIndex); }
+
   const TheItemType& Value (const Standard_Integer theIndex) const
   {
     return *(const TheItemType* )findV (theIndex);
@@ -272,6 +275,9 @@ public: //! @name public methods
   {
     return ChangeValue (theIndex);
   }
+
+  //! Operator[] - query the value
+  TheItemType& operator[] ( Standard_Integer theIndex) { return ChangeValue (theIndex); }
 
   TheItemType& ChangeValue (const Standard_Integer theIndex)
   {
